[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-resilience"
version = "0.1.0"
description = "Dependency-light resilience primitives for distributed agent systems: circuit breaker, Redis-backed DLQ, offline MQTT buffer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Musyg" }]
keywords = ["circuit-breaker", "dlq", "mqtt", "resilience", "agents", "distributed-systems"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
mqtt = ["paho-mqtt>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["agent_resilience"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
